--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -248,30 +248,30 @@ body {
   justify-content: center;
 }
 
- .menu-usuario {
-    opacity: 0;
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    background: #5d3fd3;
-    border-radius: 0 0 10px 10px;
-    position: absolute;
-    z-index: 100;
-    font-family: "bungee";
-    color: #1abc9c;
-    top: 60px;
-    right: 2rem;
-    padding: 2rem;
-    gap: 1rem;
-    transition: opacity 0.3s ease, visibility 0s 0.3s;
-  }
+.menu-usuario {
+  opacity: 0;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  background: #5d3fd3;
+  border-radius: 0 0 10px 10px;
+  position: absolute;
+  z-index: 100;
+  font-family: "bungee";
+  color: #1abc9c;
+  top: 60px;
+  right: 2rem;
+  padding: 2rem;
+  gap: 1rem;
+  transition: opacity 0.3s ease, visibility 0s 0.3s;
+}
 
-  .menu-usuario.visible {
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 0.3s ease, visibility 0s 0s;
-  }
+.menu-usuario.visible {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease, visibility 0s 0s;
+}
 
 /*Fin nav*/
 
@@ -285,6 +285,23 @@ body {
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
+}
+
+.game-card h2,
+.game-card .card-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  color: white;
+  font-size: 1.2rem;
+  margin: 0;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 15px 15px 0 0;
+  pointer-events: none;
+  z-index: 1;
+  text-align: center; /* Centra el texto horizontalmente */
 }
 
 .game-card a {
@@ -363,6 +380,7 @@ body {
   border-radius: 10px 0px 15px 0;
   background-color: #686868;
   font-size: 20px;
+  z-index: 3; /* Mayor que el h2 */
 }
 .cart-icon i {
   margin-right: 5px;
@@ -383,6 +401,7 @@ body {
   font-size: 13px;
   font-family: "Bungee";
   text-align: center;
+  z-index: 20;
 }
 
 .price-tag span {
@@ -1040,6 +1059,7 @@ textarea {
   font-weight: 900;
   margin-bottom: 10px;
   background: linear-gradient(135deg, #a855f7, #ec4899);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-transform: uppercase;
@@ -1152,8 +1172,6 @@ textarea {
     font-size: 25px;
   }
 
-
-
   .nav-icons {
     display: flex;
     align-items: center;
@@ -1177,10 +1195,6 @@ textarea {
     font-size: 24px;
     padding-right: 8px;
   }
-
-
-
-  
 
   .carruseles {
     margin-top: 4rem;
