--- a/Entrega4/css/styles.css
+++ b/Entrega4/css/styles.css
@@ -130,9 +130,9 @@ body {
 }
 
 .popup-img-container-canvas img.selected {
-  border-color: #ffff00;
-  box-shadow: 0 0 25px rgba(255, 255, 0, 0.8);
-  transform: scale(1.1);
+ transform: scale(1.1);
+  border-color: #00d4ff;
+  box-shadow: 0 0 20px rgba(0, 212, 255, 0.6);;
 }
 
 .contenedor_play {
@@ -289,6 +289,12 @@ body {
   justify-content: center;
 }
 
+.ficha.seleccionada {
+  border: 3px solid #fff;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+  transform: scale(1.05);
+  transition: 0.2s;
+}
 /* Spinner animation */
 
 #loader {
